# bebop_autonomy

./: README.md  src.kdev4
.kdev4/: src.kdev4
bebopDriver/: CMakeLists.txt  package.xml
bebopDriver/src/include/: Bebop.h
bebopDriver/src/source/: Bebop.cpp
droneMsgs/: CMakeLists.txt
droneMsgs/msg/: drone_blu_data.msg  mouse_clicked_point.msg
parrotBrainInterface/: CMakeLists.txt  package.xml
parrotBrainInterface/src/sources/: IBVS_interface.cpp
